Fix pieChart layout and add indicator for truncated piecharts

--- a/public/css/icinga/widgets.less
+++ b/public/css/icinga/widgets.less
@@ -287,7 +287,8 @@ li li .badge {
 
 .sparkline-box {
   position: relative;
-  top: -9px;
+  top: -3px;
+  float: right;
 }
 
 .dashboard .sparkline-box {
@@ -299,4 +300,6 @@ li li .badge {
   height: 12px;
   position: relative;
   top: 4px;
+
+  margin: 0em 0em 0em 0.1em;
 }
